<resources>
    <string name="app_name">Task 2.1</string>
    <string name="select_conversion">Select conversion:</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="enter_any_unit">Enter any unit</string>
    <string name="convert">Convert</string>
    <string name="output">Output</string>

    <string-array name="ConversionTypes">
        <item>Length</item>
        <item>Weight</item>
        <item>Temperature</item>
    </string-array>

    <string-array name="Weight">
        <item>Pound</item>
        <item>Ounce</item>
        <item>Ton</item>
    </string-array>

    <string-array name="Length">
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
    </string-array>

    <string-array name="Temperature">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
</resources>